# local-recorder

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start.sh
daemon/: __init__.py  align.py  audio.py  config.py  config.yaml  daemon.py  output.py  session.py  transcribe.py
daemon/systemd/: local-recorder.service
extension/: background.js  manifest.json
extension/content/: captions-core.js  meet.js  teams.js
native-host/: com.localrecorder.host.json.template  host.py  install.sh
tests/: test_align.py  test_daemon_protocol.py  test_transcribe_lang.py  test_transcribe_oom.py
